# gnn

./: .env.example  .gitignore  AGENT.md  README.md  compare_baselines.py  pyproject.toml  run.py  test_cage_structure.py  todo.md  train_gnn.py
ai/cage/: __init__.py  astar.py  bruteforce.py  constructive.py  generator.py  monte_carlo_search_tree.py  random_walk.py  tests.py
ai/degree/: model_info.json  train.py  trained_gnn.pt
backend/: __init__.py  app.py
backend/models/: degree_gnn.py  model_info.json  trained_gnn.pt
backend/routes/: api.py  cage.py  degree.py
backend/services/: graph_service.py  visualization_service.py
backend/utils/: graph_generation.py  graph_parser.py
frontend/: index.html
frontend/cage/: index.html
frontend/css/: landing.css  styles.css
frontend/css/shared/: styles.css
frontend/degree/: index.html
frontend/js/: app.js  config.js  interactive-graph.js
frontend/js/cage/: app.js
frontend/js/degree/: app.js
frontend/js/editor/: Graph.js  GraphNode.js  InteractiveGraphEditor.js  PhysicsEngine.js
frontend/js/shared/: config.js  interactive-graph.js
utils/: __init__.py  graph_utils.py
