[tool.poetry]
package-mode = false

[project]
name = "gnn"
version = "0.1.0"
description = ""
authors = [
    {name = "Vladimir Jancar",email = "jvladko@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask (>=3.1.2,<4.0.0)",
    "flask-cors (>=6.0.1,<7.0.0); python_version >= '3.13' and python_version < '4.0'",
    "networkx (>=3.5,<4.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "torch (>=2.5.0,<3.0.0) ; python_version == \"3.13\"",
    "torch-geometric (>=2.6.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
