[project]
name = "gnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "matplotlib>=3.10.7",
    "networkx>=3.5",
    "numpy>=2.3.4",
    "python-dotenv>=1.2.1",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
]
